# omini-disasm

./: .gitignore  CMakeLists.txt  README.md  entry.c  flags-computation.c  flags-computation2.c  instruction.c  instruction.h  output.c  output.h  patterns.c  patterns.h  pc-stack.c  pc-stack.h  relocations.c  relocations.h  section.c  section.h  target-specific.c  target-specific.h
common/: findfunction-dlsym.h  findfunction-dlsym.inc  findfunction-jni.h  findfunction-jni.inc  findfunction.h  findfunction.inc  gl-enums.h  gl-enums.inc  jmpbuf-table.inc  registers.inc  storeload.h  storeload.inc  tracing.h  tracing.inc
